# pr-reviewer-bot

./: .env.example  .gitignore  DESIGN.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/github/: auth.py  client.py  review.py
app/review/: diff.py  engine.py  prompt.py  schema.py
app/web/: security.py  webhooks.py
app/worker/: __main__.py  jobs.py  queue.py  redis_queue.py  retry.py  runner.py
scripts/: smoke_engine.py  smoke_github.py
tests/: test_diff.py  test_hunks.py  test_jobs.py  test_pool.py  test_redis_queue.py  test_retry.py  test_schema.py  test_security.py
